--- a/index.html
+++ b/index.html
@@ -333,6 +333,9 @@ div.tocify {
   <a href="EDA.html">Exploratory Analysis</a>
 </li>
 <li>
+  <a href="exploratory_analysis_dashboard.html">Exploratory Analysis Dashboard</a>
+</li>
+<li>
   <a href="statistical_analysis.html">Statistical Analysis</a>
 </li>
 <li>
@@ -370,6 +373,14 @@ NYC</h1>
 </div>
 <div id="statistical-analysis" class="section level2">
 <h2>Statistical Analysis</h2>
+</div>
+<div id="head" class="section level1">
+<h1>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</h1>
+<p>And I can put all kinds of stuff on it!</p>
+<p>Push test</p>
+<p>Link to <a href="">final project visualizations</a>
+&gt;&gt;&gt;&gt;&gt;&gt;&gt;
+a139a59379fd5c8f64ee85e297325a23aa7894f6</p>
 </div>
 
 
