--- a/statistical_analysis.html
+++ b/statistical_analysis.html
@@ -333,6 +333,9 @@ div.tocify {
   <a href="EDA.html">Exploratory Analysis</a>
 </li>
 <li>
+  <a href="exploratory_analysis_dashboard.html">Exploratory Analysis Dashboard</a>
+</li>
+<li>
   <a href="statistical_analysis.html">Statistical Analysis</a>
 </li>
 <li>
