project report, udated home page

--- a/project_report.html
+++ b/project_report.html
@@ -358,8 +358,32 @@ div.tocify {
 </div>
 
 
-<div id="project-final-report" class="section level3">
-<h3>Project Final Report</h3>
+<div id="motivation" class="section level1">
+<h1>Motivation</h1>
+<p>Our group was motivated by the widely available public data sets
+surrounding fast food chains we discovered by chance. In particular, we
+wanted to look at New York City-specific data, as that is where we live
+and study. The overarching goal of this project was to analyze these
+data for any geographic trends (i.e. clusters of fast food restaurants
+in specific neighborhoods) in relation to potential health outcomes
+within the community. The growing number of fast-food chains in the
+United States has pushed the US into an era of food “convenience.” Since
+the industry’s inception in 1927, there are approximately 150 thousand
+convenience stores across the US as of 2020.1–3 Their presence is
+ubiquitous; however, little is known about the general distribution of
+fast-food chains in the US. In cities like New York there seems to be a
+new chain on every corner of the city. They provide quick and cheap food
+options, alongside fast food chains, which could be the only option for
+many communities. Convenience stores and others alike are known to sell
+food products high in fats, sugars, and salts.7 The presence of
+convenience stores has been associated with higher BMI, higher obesity,
+and increased hypertension.8,9 Residents of color living in rural,
+low-income neighborhoods have inadequate access to supermarkets, chain
+grocery stores, and diversity in food products.10</p>
+<p>Thus, we were motivated by these findings to investigate trends in
+NYC. We have data spanning from 2008-2020, and analyzed various trends
+in the nutritional content of the food available at 59 fast-food
+chains/convenience stores across New York City.</p>
 </div>
 
 
