final report- updated sections

--- a/project_report.html
+++ b/project_report.html
@@ -358,8 +358,8 @@ div.tocify {
 </div>
 
 
-<div id="motivation" class="section level1">
-<h1>Motivation</h1>
+<div id="motivation" class="section level2">
+<h2>Motivation</h2>
 <p>Our group was motivated by the widely available public data sets
 surrounding fast food chains we discovered by chance. In particular, we
 wanted to look at New York City-specific data, as that is where we live
@@ -384,6 +384,51 @@ grocery stores, and diversity in food products.10</p>
 NYC. We have data spanning from 2008-2020, and analyzed various trends
 in the nutritional content of the food available at 59 fast-food
 chains/convenience stores across New York City.</p>
+</div>
+<div id="related-work" class="section level2">
+<h2>Related Work</h2>
+</div>
+<div id="initial-questions" class="section level2">
+<h2>Initial Questions</h2>
+<p>Our team sought to investigate spatial distribution of fast-food
+chains and convenience stores within the five boroughs of New York City.
+Additionally, we wanted to link the geographic distribution of these
+chains to demographic composition of the neighborhoods in which they are
+located. Lastly, we wanted to analyze the nutritional content (using the
+metrics of % trans fat, total fat, etc…) of the food available at these
+chains between the years of 2008-2020.</p>
+</div>
+<div id="data" class="section level2">
+<h2>Data</h2>
+<p>The data used for this project came from various publicly available
+sources. <a href="https://www.menustat.org/data.html">NYC DOHMH MenuStat
+nutritional database</a> Menustat provides restaurant nutritional data
+for specific foods and beverages served at national chains. Some of
+these national chains do not have a presence in NYC, so filtering those
+out was one of the first steps in our data cleaning process.</p>
+<p><a
+href="https://data.cityofnewyork.us/Health/Restaurants-rolled-up-/59dk-tdhz/data">NYC
+DOHMH Restaurant Inspections database</a> NYC Open Data provides data on
+annual restaurant inspections throughout New York City. This dataset
+allowed us to determine which of the restaurants in the MenuStat dataset
+exist in NYC. Only restaurants that were found in both datasets (59
+total) were included in our analyses for this project. This dataset also
+provides restaurant location within NYC by zipcode.</p>
+<p><a
+href="https://data.census.gov/cedsci/table?q=population%20demographics%20income&amp;g=0400000US36%248600000&amp;tid=ACSST5Y2020.S1902">NY
+U.S. census mean income data</a> <a
+href="https://data.census.gov/cedsci/table?q=population%20demographics%20&amp;g=0400000US36%248600000&amp;tid=ACSDP5Y2020.DP05">NY
+U.S. census demographic and housing estimate data</a></p>
+</div>
+<div id="exploratory-analysis" class="section level2">
+<h2>Exploratory Analysis</h2>
+</div>
+<div id="additional-analysis" class="section level2">
+<h2>Additional Analysis</h2>
+<p>Regression models</p>
+</div>
+<div id="discussion" class="section level2">
+<h2>Discussion</h2>
 </div>
 
 
