--- a/index.html
+++ b/index.html
@@ -359,7 +359,18 @@ NYC</h1>
 </div>
 
 
-
+<p>P8105 Fall 2022</p>
+<ul>
+<li>Raenita Spriggs (rs4390)</li>
+<li>Kevin Patterson (kpp2126)</li>
+<li>Lindsey Covell (ltc2121)</li>
+<li>Gabriela Jackson (glij2117)</li>
+<li>Alana Ferris (af3341)</li>
+</ul>
+<p>img src=“images/nutrition label.jpg” style=“width:75%”</p>
+<hr />
+<p><img
+src="images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_7347_FRD_(cropped).jpg" /></p>
 
 
 
