--- a/project_report.html
+++ b/project_report.html
@@ -562,6 +562,57 @@ an increase of public awareness and initiatives for healthy eating since
 2008, we would have expected that calories and trans fat distributions
 would decrease over time, rather than remain constant.</p>
 </div>
+<div id="references" class="section level2">
+<h2>References</h2>
+<ol style="list-style-type: decimal">
+<li>Vastine WJ. THE CONVENIENCE STORE INDUSTRY IN THE 1990s AND BEYOND.
+International Journal of Retail &amp; Distribution Management.
+1991;19(6). <a href="doi:10.1108/EUM0000000002953"
+class="uri">doi:10.1108/EUM0000000002953</a></li>
+<li>Ozbun T. Convenience stores in the U.S. - Statistics &amp; Facts.
+Statista. Published January 27, 2022. Accessed November 10, 2022. <a
+href="https://www.statista.com/topics/3869/convenience-stores-in-the-us/"
+class="uri">https://www.statista.com/topics/3869/convenience-stores-in-the-us/</a></li>
+<li>U.S. Convenience Store Count. Accessed November 10, 2022. <a
+href="https://www.convenience.org/Research/FactSheets/IndustryStoreCount"
+class="uri">https://www.convenience.org/Research/FactSheets/IndustryStoreCount</a></li>
+<li>Frank L, Glanz K, McCarron M, Sallis J, Sealens B, Chapman J. The
+Spatial Distribution of Food Outlet Type and Quality around Schools in
+Differing Built Environment and Demographic Contexts. Berkeley Planning
+Journal. 2006;19(1). <a href="doi:10.5070/BP319111490"
+class="uri">doi:10.5070/BP319111490</a></li>
+<li>Walker RE, Block J, Kawachi I. The Spatial Accessibility of Fast
+food Restaurants and Convenience Stores in Relation to Neighborhood
+Schools. Appl Spatial Analysis. 2014;7(2):169-182. <a
+href="doi:10.1007/s12061-013-9095-6"
+class="uri">doi:10.1007/s12061-013-9095-6</a></li>
+<li>Rodríguez-Guerra AI, López-Olmedo N, Medina C, Hernández-Alcaraz C,
+Ortega-Avila AG, Barquera S. Association between density of convenience
+and small grocery stores with diet quality in adults living in Mexico
+City: A cross sectional study. Frontiers in Public Health. 2022;10.
+Accessed November 10, 2022. <a
+href="https://www.frontiersin.org/articles/10.3389/fpubh.2022.857754"
+class="uri">https://www.frontiersin.org/articles/10.3389/fpubh.2022.857754</a></li>
+<li>Sharkey JR, Dean WR, Nalty C. Convenience stores and the marketing
+of foods and beverages through product assortment. Am J Prev Med.
+2012;43(3 Suppl 2):S109-115. <a href="doi:10.1016/j.amepre.2012.05.012"
+class="uri">doi:10.1016/j.amepre.2012.05.012</a></li>
+<li>Morland K, Diez Roux AV, Wing S. Supermarkets, other food stores,
+and obesity: the atherosclerosis risk in communities study. Am J Prev
+Med. 2006;30(4):333-339. <a href="doi:10.1016/j.amepre.2005.11.003"
+class="uri">doi:10.1016/j.amepre.2005.11.003</a></li>
+<li>Powell LM, Auld MC, Chaloupka FJ, O’Malley PM, Johnston LD.
+Associations between access to food stores and adolescent body mass
+index. Am J Prev Med. 2007;33(4 Suppl):S301-307. <a
+href="doi:10.1016/j.amepre.2007.07.007"
+class="uri">doi:10.1016/j.amepre.2007.07.007</a></li>
+<li>Larson NI, Story MT, Nelson MC. Neighborhood Environments:
+Disparities in Access to Healthy Foods in the U.S. American Journal of
+Preventive Medicine. 2009;36(1):74-81.e10. <a
+href="doi:10.1016/j.amepre.2008.09.025"
+class="uri">doi:10.1016/j.amepre.2008.09.025</a></li>
+</ol>
+</div>
 
 
 
