--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>P8105 Final Project- Nutrtritional Data in NYC</title>
+<title>Just How Fast is Fast Food Changing in NYC?</title>
 
 <script src="site_libs/header-attrs-2.17/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -353,13 +353,14 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">P8105 Final Project- Nutrtritional Data in
-NYC</h1>
+<h1 class="title toc-ignore">Just How Fast is Fast Food Changing in
+NYC?</h1>
 
 </div>
 
 
-<p>P8105 Fall 2022</p>
+<div id="p8105-final-project-fall-2022" class="section level2">
+<h2>P8105 Final Project Fall 2022</h2>
 <ul>
 <li>Raenita Spriggs (rs4390)</li>
 <li>Kevin Patterson (kpp2126)</li>
@@ -367,10 +368,12 @@ NYC</h1>
 <li>Gabriela Jackson (glij2117)</li>
 <li>Alana Ferris (af3341)</li>
 </ul>
-<p>img src=“images/nutrition label.jpg” style=“width:75%”</p>
+<hr />
+<p><img src="images/nutrition%20label.jpg" /></p>
 <hr />
 <p><img
 src="images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_7347_FRD_(cropped).jpg" /></p>
+</div>
 
 
 
