updates to home page

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@ NYC?</h1>
 </div>
 
 
-<div id="p8105-final-project-fall-2022" class="section level2">
-<h2>P8105 Final Project Fall 2022</h2>
+<div id="contributors" class="section level2">
+<h2>Contributors</h2>
 <ul>
 <li>Raenita Spriggs (rs4390)</li>
 <li>Kevin Patterson (kpp2126)</li>
@@ -373,6 +373,9 @@ NYC?</h1>
 <hr />
 <p><img
 src="images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_7347_FRD_(cropped).jpg" /></p>
+</div>
+<div id="screencast" class="section level2">
+<h2>Screencast</h2>
 </div>
 
 
